--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "puppeteer-core": "^7.1.0"
+    "puppeteer-core": "^7.1.0",
+    "sequelize": "^6.5.0"
   }
 }
