--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Anwarul Islam",
   "license": "ISC",
   "dependencies": {
+    "cli-progress": "^3.9.0",
     "express": "^4.17.1",
     "mysql2": "^2.2.5",
     "puppeteer-core": "^7.1.0",
