--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   "license": "ISC",
   "dependencies": {
     "cli-progress": "^3.9.0",
+    "excel4node": "^1.7.2",
     "express": "^4.17.1",
     "mysql2": "^2.2.5",
+    "node-xlsx": "^0.16.1",
     "puppeteer-core": "^7.1.0",
     "sequelize": "^6.5.0"
   }
